# understanding-and-using-c-pointers

./: CMakeLists.txt  README.md
src/chapter02/: dynamic_alloc.c  dynamic_alloc.h
src/chapter06/: data_structures.c  data_structures.h
src/hello/: hello.c  hello.h
tests/chapter01/: test_examples.c
tests/chapter02/: test_dynamic_alloc.c  test_examples2.c
tests/chapter03/: test_examples3.c
tests/chapter04/: test_examples4.c
tests/chapter05/: test_examples5.c
tests/chapter06/: test_data_structures.c  test_examples6.c
tests/chapter07/: test_examples7.c
tests/hello/: test_hello.c
